--- a/main.html
+++ b/main.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text to Image Generator</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/bottomstyle.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/bottomstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
@@ -21,7 +21,7 @@
             <li class="dropdown">
                 <a href="#">Category <i class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="/Page/page1.html">Image Background Remover</a></li>
+                    <li><a href="page1.html">Image Background Remover</a></li>
                     <li><a href="#">Image Upscaler</a></li>
                     <li><a href="#">Image Enhancer</a></li>
                 </ul>
@@ -144,7 +144,7 @@
 
 
 
-    <script src="/javascripts/script.js"></script>
+    <script src="javascripts/script.js"></script>
 </body>
 
 </html>
