--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="logo">
-            <a href="main.html" style="text-decoration: none; color: inherit;">AI</a>
+            <a href="index.html" style="text-decoration: none; color: inherit;">AI</a>
         </div>
         <ul class="nav-links">
-            <li><a href="main.html" class="active">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li class="dropdown">
                 <a href="#">Category <i class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
