--- a/page1.html
+++ b/page1.html
@@ -14,9 +14,9 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
-        <div class="logo"><a href="main.html" style="text-decoration: none; color: inherit;">AI</a></div>
+        <div class="logo"><a href="index.html" style="text-decoration: none; color: inherit;">AI</a></div>
         <ul class="nav-links">
-            <li><a href="main.html" class="active">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li class="dropdown">
                 <a href="#">Category <i class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
