--- a/page1.html
+++ b/page1.html
@@ -39,7 +39,7 @@
         <div class="button-container">
             <button onclick="UploadImg()">Upload</button>
         </div>
-        <div id="results"></div>
+        <div id="results2"></div>
     </div>
 
     <div class="bottomText">
@@ -143,7 +143,6 @@
     </footer>
 
     <script src="/javascripts/script.js"></script>
-    <script src="/javascripts/script1.js"></script>
 
 </body>
 
