--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li class="dropdown">
                 <a href="#">Category <i class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="page1.html">Image Background Remover</a></li>
+                    <li><a href="/Page/page1.html">Image Background Remover</a></li>
                     <li><a href="#">Image Upscaler</a></li>
                     <li><a href="#">Image Enhancer</a></li>
                 </ul>
