--- a/page1.html
+++ b/page1.html
@@ -143,6 +143,8 @@
     </footer>
 
     <script src="/javascripts/script.js"></script>
+    <script src="/javascripts/script1.js"></script>
+
 
 </body>
 
